@@ -28,6 +28,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.security.config.http.SessionCreationPolicy.STATELESS;
 
@@ -102,7 +103,10 @@ public class EPSecurityConfig {
 						"/v1/ep/release/generate-pdf", "/v1/microsoft-calendar/redirect",
 						"/internal/v1/ep/invoice/customer", "/internal/v1/ep/invoice/project",
 						"/v1/ep/auth/signin/guest/send-otp", "/v1/ep/auth/signin/guest/resend-otp",
-						"/v1/ep/auth/signin/guest/verify-otp", "/v1/ep/auth/status")
+						"/v1/ep/auth/signin/guest/verify-otp", "/v1/ep/auth/status", "/v1/auth/session/sign-in",
+						"/v1/auth/session/sign-out", "/v1/auth/session/refresh-token",
+						"/v2/ep/auth/session/signin/sso/google", "/v2/ep/auth/session/signin/sso/microsoft",
+						"/v1/ep/auth/session/code-challenge/verify")
 				.permitAll()
 				.requestMatchers("/v1/reset-database")
 				.permitAll()
@@ -140,7 +144,14 @@ public class EPSecurityConfig {
 				"Origin", "Stripe-Signature", "X-Api-Key"));
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		CorsConfiguration credentialedConfig = getCorsConfigurationCookies(origins);
+		source.registerCorsConfiguration("/v1/auth/session/sign-in", credentialedConfig);
+		source.registerCorsConfiguration("/v1/auth/session/sign-out", credentialedConfig);
+		source.registerCorsConfiguration("/v1/auth/session/refresh-token", credentialedConfig);
+		source.registerCorsConfiguration("/v2/ep/auth/session/signin/sso/google", credentialedConfig);
+		source.registerCorsConfiguration("/v2/ep/auth/session/signin/sso/microsoft", credentialedConfig);
+		source.registerCorsConfiguration("/v1/ep/auth/session/code-challenge/verify", credentialedConfig);
 		source.registerCorsConfiguration("/v1/ep/cf/cookies/**", credentialedConfig);
+
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
 	}
@@ -148,9 +159,10 @@ public class EPSecurityConfig {
 	private CorsConfiguration getCorsConfigurationCookies(String[] origins) {
 		CorsConfiguration credentialedConfig = new CorsConfiguration();
 		credentialedConfig.setAllowedOriginPatterns(Arrays.asList(origins));
-		credentialedConfig.setAllowedMethods(Arrays.asList("GET", "OPTIONS"));
-		credentialedConfig.setAllowedHeaders(
-				Arrays.asList("Authorization", "Content-Type", "X-Tenant-ID", "Referer", "Origin", "Stripe-Signature"));
+		credentialedConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+		credentialedConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Tenant-ID", "Referer",
+				"Origin", "Stripe-Signature", "Set-Cookie"));
+		credentialedConfig.setExposedHeaders(List.of("Set-Cookie"));
 		credentialedConfig.setAllowCredentials(true);
 		return credentialedConfig;
 	}
